# CCAR-workflow

./: .gitignore  AGENTS.md  DEVELOPMENT.md  README.md  pyproject.toml
.github/workflows/: check-updates.yml
000/: 说明.md
JS/: manifest.json  normative.js  normative.json  regulation.js  regulation.json  specification.js  specification.json
data/: ccar_index.json  downloads.json  r2_uploads.json  regulations.json
downloads/other/: 关于变更华夏航空股份有限公司经营许可证所载主运营基地机场的公示.txt  关于大连润宇空港建设工程有限公司等1家资质企业追加动态核查核定意见的公示.txt  关于浩邦建设集团有限公司等3家资质企业追加动态核查核定结论的通知.txt  关于进一步规范和加强运输机场专业工程初步设计审批及行业验收管理的通知.txt  发改低空〔2026〕123号发布丨国家发展改革委 金融监管总局 中国民航局关于推动低空保险高质量发展的实施意见.txt  商务部等9单位关于印发《2026“乐购新春”春节特别活动方案》的通知.txt
downloads/regulation/: CCAR-115TM-R1民用航空通信导航监视工作规则.txt  CCAR-115TM-R2交通运输部关于修改《民用航空通信导航监视工作规则》的决定.txt  CCAR-116-R1民用航空气象探测设施及探测环境管理办法.txt  CCAR-117-R2中国民用航空气象工作规则.txt  CCAR-13-R1民用航空行政检查工作规则.txt  CCAR-139-II-R1民用运输机场突发事件应急救援管理规则.txt  CCAR-139CA-R4交通运输部关于修改《运输机场使用许可规定》的决定.txt  CCAR-14-R2民用航空行政处罚实施办法.txt  CCAR-158-R1民用机场建设管理规定.txt  CCAR-158-R2交通运输部关于修改《民用机场建设管理规定》的决定.txt  CCAR-175TM-R1民用航空情报工作规则.txt  CCAR-183AA-R1民用航空适航委任代表和委任单位代表管理规定.txt  CCAR-201-R1交通运输部关于修改《公共航空运输企业经营许可规定》的决定.txt  CCAR-20LR-I关于修改《民用航空器领航员、飞行机械员、飞行通信员合格审定规则》和废止《民用航空运输凭证印制管理规定》的决定.txt  CCAR-20TR关于修改《定期国际航空运输管理规定》、《民用航空国内航线经营许可规定》和《公共航空运输企业经营许可规定》的决定.txt  CCAR-21-R4民用航空产品和零部件合格审定规定.txt  CCAR-241-R2民用航空统计管理规定.txt  CCAR-243-R1民用航空财经信息管理办法.txt  CCAR-246民航企业安全保障财务考核办法.txt  CCAR-277TR-R1定期国际航空运输管理规定.txt  (+49 more)
scripts/: r2-upload.mjs
src/: README.md  __init__.py  crawler.py  main.py  notifier.py  r2_uploader.py  storage.py
