[project]
name = "ccar-workflow"
version = "0.1.0"
description = "CAAC 规章更新监控 - 自动检测并通知规章变化"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # 爬虫
    "patchright>=1.49.0",  # 反检测 Playwright
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",  # BeautifulSoup 解析器
    "httpx>=0.27.0",
    
    # 日志
    "loguru>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
