[project]
name = "ccar-workflow"
version = "0.1.0"
description = "CAAC Regulation Update Monitor - Automatically detect and notify regulation changes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Crawler
    "patchright>=1.49.0",  # Anti-detection Playwright
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",  # BeautifulSoup parser
    "httpx>=0.27.0",

    # Cloud storage (R2) - only botocore needed for SigV4 signing, httpx handles HTTP
    "boto3>=1.35.0",

    # Logging
    "loguru>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
